--- a/sites/backroadsnews.com/themes/news_center/css/news_center.css
+++ b/sites/backroadsnews.com/themes/news_center/css/news_center.css
@@ -337,3 +337,7 @@ h2.node-title{}
 
 #block-block-15 {margin-left: -8px;}
 #block-block-16 {margin-bottom: 5px;}
+
+#block-views-breaking-news-block {display:block; width:728px; height: 60px; background-color:#F9760B; margin-left:-10px; margin-bottom: 8px; overflow:hidden;}
+#block-views-breaking-news-block a {color: #ffffff; font-size: 18px; line-height:24px; margin-left: 15px;}
+#block-views-breaking-news-block h2.block-title {border-bottom: 1px dashed #ffffff; color: #ffffff; font-family: "Open Sans",sans-serif; font-size: 24px; font-weight: 300;}
