--- a/sites/backroadsnews.com/themes/news_center/css/news_center.css
+++ b/sites/backroadsnews.com/themes/news_center/css/news_center.css
@@ -329,7 +329,7 @@ h2.node-title{}
 #block-block-9{margin-left:-10px;margin-top:-17px;}
 
 #block-simpleads-ad-groups-27 img{width:218px;height:100px;float:left;margin-right:15px;margin-bottom:20px;margin-top:15px;}
-#block-simpleads-ad-groups-29 img{width:728px;height:90px;float:left;margin-right:10px;margin-bottom:20px;}
+#block-simpleads-ad-groups-29 img{width:728px;height:90px;float:left;margin-right:10px;margin-bottom:10px; margin-left:-4px;}
 
 .views-row h4.field-content a{font-size:14px;color:#fd6f07;}
 
@@ -341,3 +341,11 @@ h2.node-title{}
 #block-views-breaking-news-block {display:block; width:728px; height: 60px; background-color:#F9760B; margin-left:-10px; margin-bottom: 8px; overflow:hidden;}
 #block-views-breaking-news-block a {color: #ffffff; font-size: 18px; line-height:24px; margin-left: 15px;}
 #block-views-breaking-news-block h2.block-title {border-bottom: 1px dashed #ffffff; color: #ffffff; font-family: "Open Sans",sans-serif; font-size: 24px; font-weight: 300;}
+
+/* style for network ads */
+#block-block-17 img {width:300px; height:250px;}
+#block-block-17 {margin: 3px 0px 5px -11px; width:300px;}
+#block-block-18 img {width:728px; height:90px;}
+#block-block-18 {margin: 0px 0px 5px -3px; width: 728px;}
+#block-block-19 {text-align:center;}
+#block-block-20 {text-align:center;}
