--- a/sites/indyrepnews.com/themes/news_center/css/news_center.css
+++ b/sites/indyrepnews.com/themes/news_center/css/news_center.css
@@ -308,7 +308,7 @@ h2.node-title{}
 
 #block-views-calendar-block-2, #block-poll-recent{background:#E5ECF9;padding:3px;border:1px solid #ddd;}
 
-#block-simpleads-ad-groups-13 img{max-width:99%;height:auto;float: right;}
+#block-simpleads-ad-groups-13 img{max-width:99%;height:auto;margin: 0 0 10px;}
 
 #photowithcaption{max-width:440px;float:left;}
 
@@ -346,9 +346,10 @@ h2.node-title{}
 
 #block-block-14{margin-left:-10px;margin-top:-17px;}
 
-#block-simpleads-ad-groups-43 img{width:468px;height:90px;float:right;margin-top:-120px;margin-left:10px;margin-bottom:10px;}
+#block-simpleads-ad-groups-43 img{width:468px;height:90px;float:right;margin-top:-220px;margin-left:10px;margin-bottom:10px;}
 
-#block-block-5 {float:right;}
+#block-block-5 {float:right; margin: -110px 7px 0 0;}
+#block-block-16 {width:300px; margin-left:-10px;}
 
 .articles-images-block #photowithcaption{margin-right:0px;}
 
