--- a/sites/clintondailynews.com/themes/masthead/css/style1.css
+++ b/sites/clintondailynews.com/themes/masthead/css/style1.css
@@ -1,4 +1,4 @@
-/* HTML 
+/* HTML
 --------------------------------------------------------------------------*/
 
 body {
@@ -9,23 +9,23 @@ body {
   background: #dddddd url(../images/style1/background.png);
 }
 
-a {	
+a {
   font-weight: normal;
 }
 
-a:hover {	
+a:hover {
   text-decoration: underline;
 }
 
 h1, h2, h3, h4, h5 {
   font-family: 'Lato', sans-serif;
-  line-height: 1.0em;	
+  line-height: 1.0em;
   font-weight: normal;
   text-transform: uppercase;
 }
 
 h1 {
-  font-size: 24px;	
+  font-size: 24px;
 }
 
 h1#page-title  {
@@ -33,11 +33,11 @@ h1#page-title  {
 }
 
 .front h1#page-title {
-  display:none;	
+  display:none;
 }
 
 h2 {
-  font-size: 24px;	
+  font-size: 24px;
 }
 
 .container_12 {
@@ -45,15 +45,15 @@ h2 {
 }
 
 #page {
-  background: url(../images/style1/background-shadow.png) top center repeat-y;	
+  background: url(../images/style1/background-shadow.png) top center repeat-y;
 }
 
 .page-inner {
-  background: #f9f9f9 url(../images/style1/page-background.png);	
+  background: #f9f9f9 url(../images/style1/page-background.png);
 }
 
 p {
-  padding-bottom: 10px;	
+  padding-bottom: 10px;
 }
 
 table {
@@ -63,26 +63,24 @@ tr {
 }
 
 td {
-  padding: 5px;	
+  padding: 5px;
   vertical-align: middle;
   border: 1px solid #dddddd;
 }
 
-/* HEADER 
+/* HEADER
 --------------------------------------------------------------------------*/
 
 .header-wrapper-inner {
-  padding: 15px 0 20px 0;	
+  padding: 15px 0 20px 0;
 }
 
 header {
-  float: left;	
+  float: left;
 }
 
-.site-logo {
-}
-
-hgroup {
+.site-logo img {
+	max-width: 100%;
 }
 
 h1.site-name, h2.site-name {
@@ -93,18 +91,18 @@ h1.site-name, h2.site-name {
 }
 
 h3.site-slogan {
-  text-shadow: 1px 1px #ffffff;	
+  text-shadow: 1px 1px #ffffff;
 }
 
-/* SLIDESHOW 
+/* SLIDESHOW
 --------------------------------------------------------------------------*/
 
 .view-slideshow {
 }
 
-.view-slideshow .views_slideshow_main {	
+.view-slideshow .views_slideshow_main {
   position: relative;
-  height: 300px;
+  height: 400px;
 }
 
 .view-slideshow .views_slideshow_main .views-field-field-image {
@@ -124,7 +122,7 @@ h3.site-slogan {
 }
 
 .view-slideshow .views_slideshow_main .views-field-title {
-  position: absolute; 
+  position: absolute;
   padding: 20px;
   width: 578px;
   top: -20px;
@@ -144,12 +142,12 @@ h3.site-slogan {
 .view-slideshow .views_slideshow_main .views-field-body {
   position: absolute;
   height: 50px;
-  width: 578px; 
+  width: 578px;
   padding: 20px;
-  top:190px;
+  top: 290px;
   left: -20px;
-  background: url(../images/style1/trans.png);
-  color: #cccccc;
+  background: url(../images/style2/trans.png);
+  color: #fff;
   text-shadow: -1px -1px #000000;
 }
 
@@ -158,11 +156,11 @@ h3.site-slogan {
 
 .view-slideshow .views-slideshow-controls-bottom .views-field-field-image img, .view-slideshow .views-slideshow-controls-bottom .views-field-field-video img {
   display: block;
-  margin-right: 50px;
-  margin-left: 50px;
+  margin-right: 10px;
+  margin-left: 10px;
   float: left;
   opacity: 0.5;
-  border: 2px solid #333333;
+  border: 1px solid #333333;
   box-shadow: 0 1px 3px #999999;
 }
 
@@ -177,15 +175,15 @@ h3.site-slogan {
 
 
 .view-slideshow .views-slideshow-controls-bottom #views_slideshow_pager_field_item_bottom_slideshow-block_5 .views-field-field-image img, .view-slideshow .views-slideshow-controls-bottom #views_slideshow_pager_field_item_bottom_slideshow-block_5 .views-field-field-video img {
-  margin-right: 0; 	
+  margin-right: 0;
 }
 
-/* PREFACE 
+/* PREFACE
 --------------------------------------------------------------------------*/
 .preface-wrapper .block .content {height: 300px;}
 .preface-wrapper .content {
   padding: 20px 0 0 0;
-  color: #999999;	
+  color: #999999;
 }
 
 .preface-wrapper h3 {
@@ -194,31 +192,31 @@ h3.site-slogan {
 
 .preface-wrapper h3 span {
   padding-right: 5px;
-  background: #f9f9f9;	
+  background: #f9f9f9;
 }
 
-/* MAIN CONTENT 
+/* MAIN CONTENT
 --------------------------------------------------------------------------*/
 
 .main-content-wrapper {
-  margin-top: 20px;	
+  margin-top: 20px;
 }
 
 #main-content .block-inner, #preface .block-inner, h1#page-title {
   padding: 20px;
   margin-bottom: 20px;
   border: 1px solid #dddddd;
-  border-bottom: 3px solid #920000;	
+  border-bottom: 3px solid #920000;
   background: #ffffff;
   box-shadow: 0px 1px 5px #bbbbbb;
 }
 
-/* SIDEBARS 
+/* SIDEBARS
 --------------------------------------------------------------------------*/
 
 .sidebar .content {
   padding: 20px 0 0 0;
-  color: #999999;	
+  color: #999999;
 }
 
 .sidebar h3 {
@@ -227,19 +225,19 @@ h3.site-slogan {
 
 .sidebar h3 span {
   padding-right: 5px;
-  background: #f9f9f9;	
+  background: #f9f9f9;
 }
 
-/* POSTSCRIPT 
+/* POSTSCRIPT
 --------------------------------------------------------------------------*/
 
 #postscript {
-  color: #dddddd;	
+  color: #dddddd;
   font-size: 0.9em;
 }
 
 #postscript a {
-  color: #dddddd;	
+  color: #dddddd;
   font-weight: normal;
   text-shadow: -1px -1px #000000;
 }
@@ -247,17 +245,17 @@ h3.site-slogan {
 .postscript-wrapper {
   padding: 20px 0;
   margin: 0 -10px;
-  background: url(../images/style1/postscript-bg.png);	
+  background: url(../images/style1/postscript-bg.png);
   border-top: 20px solid #252525;
 }
 
 .postscript-wrapper .block-inner {
-    padding: 0px;	
+    padding: 0px;
 }
 
 .postscript-wrapper .content {
   padding: 0;
-  color: #999999;	
+  color: #999999;
 }
 
 .postscript-wrapper h3 {
@@ -269,7 +267,7 @@ h3.site-slogan {
 
 .postscript-wrapper h3 span {
   padding-right: 5px;
-  background: #333333;	
+  background: #333333;
   color: #999999;
 }
 
@@ -302,11 +300,11 @@ h3.site-slogan {
   color: #ffffff;
 }
 
-/* LISTS 
+/* LISTS
 --------------------------------------------------------------------------*/
 
 .item-list ul {
-  margin-left: 20px;	
+  margin-left: 20px;
 }
 
 .item-list ul li span {
@@ -337,7 +335,7 @@ h3.site-slogan {
 }
 
 
-/* USER MENU 
+/* USER MENU
 --------------------------------------------------------------------------*/
 
 #user-menu {
@@ -379,11 +377,11 @@ h3.site-slogan {
 }
 
 #user-menu ul.menu li li {
-  border-bottom: 1px solid #dddddd;	
+  border-bottom: 1px solid #dddddd;
 }
 
 #user-menu ul.menu li li.last {
-  border-bottom: 0px solid #dddddd;	
+  border-bottom: 0px solid #dddddd;
 }
 
 #user-menu ul.menu li li a, #user-menu ul.menu li li a.active {
@@ -395,7 +393,7 @@ h3.site-slogan {
 }
 
 #user-menu ul.menu li li a:hover, #user-menu ul.menu li li a.active:hover {
-  background: #eeeeee;  
+  background: #eeeeee;
 }
 
 #main-menu ul.menu li ul ul {
@@ -415,14 +413,14 @@ h3.site-slogan {
 }
 
 
-/* MAIN MENU 
+/* MAIN MENU
 --------------------------------------------------------------------------*/
 
-#main-menu {	
+#main-menu {
   position: relative;
 }
 
-#main-menu h3 {	
+#main-menu h3 {
   display: none;
 }
 
@@ -433,32 +431,26 @@ h3.site-slogan {
   max-height: 85px;
   margin: 0;
   border: 1px solid #dddddd;
-  border-bottom: 3px solid #920000;
-  background: #333333 url(../images/style1/main-menu-bg.png) top left repeat-x;
+  border-bottom: 3px solid #000;
 }
 
 #main-menu ul.menu li {
-	
+
 }
 
 #main-menu ul.menu li a {
   display: block;
   height: 40px;
   line-height: 40px;
-  color: #555555;
-  padding: 0 20px;	
+  color: #ffffff;
+  padding: 0 15px;
   text-transform: uppercase;
-  text-shadow: 1px 1px #ffffff;
   border-right: 1px solid #dddddd;
   border-left: 1px solid #f9f9f9;
 }
 
 #main-menu ul.menu li.first a {
-  border-left: 0px solid #f9f9f9;	
-}
-
-#main-menu ul.menu li.last a {
-  border-right: 0px solid #dddddd;
+  border-left: 0px solid #f9f9f9;
 }
 
 #main-menu ul.menu li a:hover {
@@ -481,13 +473,56 @@ h3.site-slogan {
 /* Main Menu Drop Down */
 
 #main-menu ul.menu li ul {
- display: none;
+    display: none;
+    background-color: #333333;
+    top: 40px;
+}
+
+#main-menu ul.menu li ul li {
+    background-color: #333333;
+    min-width: 200px;
+    border: none;
+}
+
+#main-menu ul.menu li ul li a {
+    background-color: #333333;
+    padding-left: 10px;
+}
+
+#main-menu ul.menu li ul li.first a {
+    border: none;
+}
+
+#main-menu ul.menu li ul li a:hover {
+    background-color: #008ad2;
+    color: #ffffff;
+    border: none;
+    height: 40px;
+    line-height: 40px;
+}
+
+#main-menu ul.menu li ul li a.active {
+    background-color: #008ad2;
+    color: #ffffff;
+    border: none;
+    height: 40px;
+    line-height: 40px;
+    padding-left: 3px;
+}
+
+#main-menu ul.menu li ul li a.active:hover {
+    color: #333333;
+    border: none;
+    height: 40px;
+    line-height: 40px;
+    padding-left: 10px;
+    background: #eeeeee;
 }
 
 /* MAIN MENU SECOND LEVEL
 --------------------------------------------------------------------------*/
 
-#main-menu-second-level h3 {	
+#main-menu-second-level h3 {
   display: none;
 }
 
@@ -506,7 +541,7 @@ h3.site-slogan {
   height: 25px;
   line-height: 25px;
   color: #ffffff;
-  padding: 0 20px;	
+  padding: 0 20px;
   text-shadow: -1px -1px #111111;
 }
 
@@ -535,11 +570,11 @@ h3.site-slogan {
 }
 
 #main-menu-second-level ul.menu li li {
-  border-bottom: 1px solid #dddddd;	
+  border-bottom: 1px solid #dddddd;
 }
 
 #main-menu-second-level ul.menu li li.last {
-  border-bottom: 0px solid #dddddd;	
+  border-bottom: 0px solid #dddddd;
 }
 
 #main-menu-second-level ul.menu li li a, #main-menu-second-level ul.menu li li a.active {
@@ -553,7 +588,7 @@ h3.site-slogan {
 }
 
 #main-menu-second-level ul.menu li li a:hover, #main-menu-second-level ul.menu li li a.active:hover {
-  background: #eeeeee;  
+  background: #eeeeee;
 }
 
 #main-menu-second-level ul.menu li ul ul {
@@ -574,7 +609,7 @@ h3.site-slogan {
 
 
 
-/* SIDE MENU 
+/* SIDE MENU
 --------------------------------------------------------------------------*/
 
 /* CONTENT TOP & CONTENT BOTTOM
@@ -584,14 +619,14 @@ h3.site-slogan {
 --------------------------------------------------------------------------*/
 
 .node .field-name-field-image  img {
-  display: block;	
+  display: block;
   margin-top: -20px;
   margin-left: -20px;
   margin-bottom: 10px;
 }
 
 .node .field-name-field-video iframe {
-  display: block;	
+  display: block;
   margin-top: -20px;
   margin-left: -20px;
   margin-bottom: 10px;
@@ -600,12 +635,12 @@ h3.site-slogan {
 .submitted {
   padding: 5px 0;
   margin-bottom: 10px;
-  color: #999999;	
+  color: #999999;
   border-bottom: 1px solid #dddddd;
 }
 
 .node .content a {
-  color: #920000;	
+  color: #920000;
 }
 
 .node ul.inline li {
@@ -623,12 +658,7 @@ h3.site-slogan {
 
 .node .taxonomy .field-type-taxonomy-term-reference {
   margin: 5px 0;
-  field-type-taxonomy-term-reference
-  background: #f9f9f9;	
-}
-
-.node .taxonomy-inner {
-≈
+  background-color: #f9f9f9;
 }
 
 .node .taxonomy a {
@@ -640,7 +670,7 @@ h3.site-slogan {
 /* Teasers */
 
 .node-teaser {
-  margin-bottom: 20px;	
+  margin-bottom: 20px;
 }
 
 .node-teaser h2.title {
@@ -652,7 +682,7 @@ h3.site-slogan {
 }
 
 .node-teaser .field-name-field-image  img {
-  display: block;	
+  display: block;
   padding: 10px;
   float: left;
   margin: 0 20px 0 0;
@@ -660,7 +690,7 @@ h3.site-slogan {
 }
 
 .node-teaser .field-name-field-video iframe {
-  display: block;	
+  display: block;
   padding: 10px;
   float: left;
   margin: 0 20px 0 0;
@@ -668,7 +698,7 @@ h3.site-slogan {
 }
 
 .node-teaser .links, .node-teaser .content, .node-teaser p, .node-teaser .field, .node-teaser .field-items, .node-teaser .field-item {
-  display: inline;	
+  display: inline;
 }
 
 /* COMMENTS
@@ -677,7 +707,7 @@ h3.site-slogan {
 #comments h2 {
   padding-bottom: 10px;
   font-size: 14px;
-  font-weight: bold;	
+  font-weight: bold;
 }
 
 #comments .comment {
@@ -723,7 +753,7 @@ h3.site-slogan {
 
 #comments .indented .comment {
   padding: 10px;
-  margin-left: 0px;
+  margin-left: 0;
   margin-bottom: 0;
   background: #f9f9f9;
   border-bottom: 0;
@@ -736,11 +766,11 @@ h3.site-slogan {
 --------------------------------------------------------------------------*/
 
 .region-search-box {
-  float: right;	
+  float: right;
 }
 
 #search-block-form {
-  margin-top: 0x;
+  margin-top: 0;
   background: 0;
   line-height: 25px;
   border-left: 1px solid #dddddd;
@@ -752,8 +782,8 @@ h3.site-slogan {
 }
 
 #search-block-form  .form-item, #search-block-form  .form-actions {
-  margin-bottom: 0em;
-  margin-top: 0em;
+  margin-bottom: 0;
+  margin-top: 0;
 }
 
 #search-block-form .form-text, #search-block-form .form-submit {
@@ -849,7 +879,7 @@ h3.site-slogan {
 .more-link {
   margin-top: 5px;
   font-size: 0.8em;
-  text-transform: uppercase;	
+  text-transform: uppercase;
 }
 
 ul.primary {
@@ -893,7 +923,7 @@ body #main-content .quicktabs-wrapper .block-inner {
   padding: 0px;
   margin-bottom: 0px;
   border: 0px solid #dddddd;
-  border-bottom: 0px solid #920000;	
+  border-bottom: 0px solid #920000;
   background: 0;
   box-shadow: 0px 0px 0px #bbbbbb;
 }
@@ -996,7 +1026,7 @@ ul.quicktabs-tabs.quicktabs-style-nostyle li.active a {
 }
 
 .preface-wrapper .attachment .views-row-last {
-  border-bottom: 0px dotted #999;	
+  border-bottom: 0px dotted #999;
 }
 
 .preface-wrapper .attachment .views-row a {
