--- a/sites/newsblade.com/themes/cni/css/theme.css
+++ b/sites/newsblade.com/themes/cni/css/theme.css
@@ -337,7 +337,7 @@ article .field-image {
     color: #999999;
 }
 
-#postscript #postscript .block-menu-block ul.menu li {
+#postscript .block-menu-block ul.menu li {
     padding: 3px 0;
     list-style-type: none;
 }
