--- a/sites/newsblade.com/themes/cni/css/theme.css
+++ b/sites/newsblade.com/themes/cni/css/theme.css
@@ -313,6 +313,7 @@ article .field-image {
     border-top: 20px solid #252525;
 }
 
+/* override widths for .grid_3 in footer */
 .container_12 .postscript-wrapper .grid_3 {
     width: 31% !important;
 }
@@ -337,9 +338,10 @@ article .field-image {
     color: #999999;
 }
 
+/* override default styles for user menu in footer */
 #postscript .block-menu-block ul.menu li {
-    padding: 3px 0;
-    list-style-type: none;
+    padding-left: 0 !important;
+    list-style-type: none !important;
 }
 
 #postscript .item-list ul li {
