--- a/sites/newsblade.com/themes/cni/css/responsive.css
+++ b/sites/newsblade.com/themes/cni/css/responsive.css
@@ -289,6 +289,11 @@
         background: none;
     }
 
+    .region-postscript-2 {
+        display: none;
+        visibility: hidden;
+    }
+
     .region-postscript-4 {
         margin-top: 1em;
     }
@@ -420,10 +425,14 @@
         background: none;
     }
 
+    .region-postscript-2 {
+        display: none;
+        visibility: hidden;
+    }
+
     .region-postscript-4 {
         margin-top: 1em;
     }
-
 
     /* weather block */
     #block-block-35 .block-inner {
