--- a/sites/newsblade.com/themes/cni/css/responsive.css
+++ b/sites/newsblade.com/themes/cni/css/responsive.css
@@ -294,6 +294,11 @@
         visibility: hidden;
     }
 
+    /* override widths for .grid_3 in footer */
+    .container_12 .postscript-wrapper .grid_3 {
+        width: 30% !important;
+    }
+
     .region-postscript-4 {
         margin-top: 1em;
     }
@@ -430,6 +435,11 @@
         visibility: hidden;
     }
 
+    /* override widths for .grid_3 in footer */
+    .container_12 .postscript-wrapper .grid_3 {
+        width: 30% !important;
+    }
+
     .region-postscript-4 {
         margin-top: 1em;
     }
@@ -560,6 +570,16 @@
         margin-left: 0;
         margin-bottom: 10px;
         background: none;
+    }
+
+    .region-postscript-2 {
+        display: none;
+        visibility: hidden;
+    }
+
+    /* override widths for .grid_3 in footer */
+    .container_12 .postscript-wrapper .grid_3 {
+        width: 30% !important;
     }
 
     .region-postscript-4 {
