--- a/sites/newsblade.com/themes/cni/css/theme.css
+++ b/sites/newsblade.com/themes/cni/css/theme.css
@@ -292,6 +292,10 @@ article .field-image {
     margin-bottom: 0;
 }
 
+.sidebar div:first-child .content {
+    padding: 0;
+}
+
 /* POSTSCRIPT 
 --------------------------------------------------------------------------*/
 
