--- a/sites/newsblade.com/themes/cni/css/theme.css
+++ b/sites/newsblade.com/themes/cni/css/theme.css
@@ -1,4 +1,4 @@
-/* HTML 
+/* HTML
 --------------------------------------------------------------------------*/
 
 body {
@@ -65,7 +65,7 @@ td {
     border: 1px solid #dddddd;
 }
 
-/* HEADER 
+/* HEADER
 --------------------------------------------------------------------------*/
 
 .header-wrapper-inner {
@@ -91,7 +91,7 @@ h3.site-slogan {
 	float: left;
 }
 
-/* SLIDESHOW 
+/* SLIDESHOW
 --------------------------------------------------------------------------*/
 
 .view-slideshow {
@@ -176,7 +176,7 @@ h3.site-slogan {
     margin-right: 0;
 }
 
-/* PREFACE 
+/* PREFACE
 --------------------------------------------------------------------------*/
 
 .preface-wrapper .views-row {
@@ -242,7 +242,7 @@ h3.site-slogan {
 }
 
 .preface-wrapper .block-inner .views-field-title h3 a {
-	
+
 }
 
 .preface-wrapper .block-inner .views-field-body p {
@@ -255,7 +255,7 @@ h3.site-slogan {
     font-style: italic;
 }
 
-/* MAIN CONTENT 
+/* MAIN CONTENT
 --------------------------------------------------------------------------*/
 
 .main-content-wrapper {
@@ -275,7 +275,7 @@ article .field-image {
 	margin-bottom: 1em;
 }
 
-/* SIDEBARS 
+/* SIDEBARS
 --------------------------------------------------------------------------*/
 
 .sidebar .content {
@@ -296,7 +296,7 @@ article .field-image {
     padding: 0;
 }
 
-/* POSTSCRIPT 
+/* POSTSCRIPT
 --------------------------------------------------------------------------*/
 
 #postscript {
@@ -402,7 +402,7 @@ article .field-image {
 --------------------------------------------------------------------------*/
 
 
-/* LISTS 
+/* LISTS
 --------------------------------------------------------------------------*/
 
 .item-list ul {
@@ -666,6 +666,12 @@ article .field-image {
 
 #main-menu-second-level ul.menu li li.expanded, #main-menu-second-level ul.menu li li li.expanded {
     background: 0;
+}
+
+/* theme default mobile menu */
+#mm0 {
+    display: none;
+    visibility: hidden;
 }
 
 /* SIDE MENU
