--- a/sites/theclaycountynews.com/themes/news_center/css/news_center.css
+++ b/sites/theclaycountynews.com/themes/news_center/css/news_center.css
@@ -348,3 +348,8 @@ h2.node-title{}
 #block-block-8{margin-left:-10px;}
 
 #block-views-videos-block {margin-left:-10px;}
+
+/* network ad styles */
+#block-block-15 img{width:728px;height:90px;float:left;margin-right:10px;margin-bottom:20px;}
+#block-block-16 {width:300px;height:250x;padding:0 5px; background:none;}
+#block-block-16 img{width:300px;height:250x; margin-left:-12px;}
