--- a/sites/stiglernews.com/themes/cni/css/site.css
+++ b/sites/stiglernews.com/themes/cni/css/site.css
@@ -149,3 +149,12 @@
 	text-align:center;
 	margin-top: 5px;
 }
+
+/* hide info on webforms */
+article.node-webform .node-content-wrapper .submitted span {
+    display: none;
+}
+
+article.node-webform .node-content-wrapper h1.title {
+    margin-bottom: 0;
+}
