--- a/sites/stiglernews.com/themes/cni/css/theme.css
+++ b/sites/stiglernews.com/themes/cni/css/theme.css
@@ -53,12 +53,6 @@ p {
     padding-bottom: 10px;
 }
 
-table {
-}
-
-tr {
-}
-
 td {
     padding: 5px;
     vertical-align: middle;
@@ -179,6 +173,10 @@ h3.site-slogan {
 
 .view-slideshow .views-slideshow-controls-bottom #views_slideshow_pager_field_item_bottom_slideshow-block_5 .views-field-field-image img, .view-slideshow .views-slideshow-controls-bottom #views_slideshow_pager_field_item_bottom_slideshow-block_5 .views-field-field-video img {
     margin-right: 0;
+}
+
+.view .pager {
+    font-family: 'Lato', sans-serif;
 }
 
 /* PREFACE 
@@ -412,7 +410,6 @@ article .field-image {
     list-style-position: outside;
     list-style-type: square;
     color: #000;
-    border-bottom: 1px dotted #999999;
 }
 
 .item-list ul li.last {
