--- a/sites/stiglernews.com/themes/cni/css/theme.css
+++ b/sites/stiglernews.com/themes/cni/css/theme.css
@@ -1,4 +1,4 @@
-/* HTML 
+/* HTML
 --------------------------------------------------------------------------*/
 
 body {
@@ -63,7 +63,7 @@ img {
     max-width: 100%;
 }
 
-/* HEADER 
+/* HEADER
 --------------------------------------------------------------------------*/
 
 .header-wrapper-inner {
@@ -86,10 +86,10 @@ h3.site-slogan {
 }
 
 .region-headerad .block {
-	float: left;
+    float: left;
 }
 
-/* SLIDESHOW 
+/* SLIDESHOW
 --------------------------------------------------------------------------*/
 
 .view-slideshow {
@@ -179,7 +179,7 @@ h3.site-slogan {
     font-family: 'Lato', sans-serif;
 }
 
-/* PREFACE 
+/* PREFACE
 --------------------------------------------------------------------------*/
 
 .preface-wrapper .views-row {
@@ -240,12 +240,12 @@ h3.site-slogan {
 }
 
 .preface-wrapper .block-inner .views-field-title h3 {
-	line-height: 1.5em;
-	margin-bottom: 3pt;
+    line-height: 1.5em;
+    margin-bottom: 3pt;
 }
 
 .preface-wrapper .block-inner .views-field-title h3 a {
-	
+
 }
 
 .preface-wrapper .block-inner .views-field-body p {
@@ -258,7 +258,7 @@ h3.site-slogan {
     font-style: italic;
 }
 
-/* MAIN CONTENT 
+/* MAIN CONTENT
 --------------------------------------------------------------------------*/
 
 .main-content-wrapper {
@@ -275,10 +275,10 @@ h3.site-slogan {
 }
 
 article .field-image {
-	margin-bottom: 1em;
+    margin-bottom: 1em;
 }
 
-/* SIDEBARS 
+/* SIDEBARS
 --------------------------------------------------------------------------*/
 
 .sidebar .content {
@@ -295,7 +295,11 @@ article .field-image {
     margin-bottom: 0;
 }
 
-/* POSTSCRIPT 
+.sidebar div:first-child .content {
+    padding: 0;
+}
+
+/* POSTSCRIPT
 --------------------------------------------------------------------------*/
 
 #postscript {
@@ -316,18 +320,21 @@ article .field-image {
     border-top: 20px solid #252525;
 }
 
+/* override widths for .grid_3 in footer */
+.container_12 .postscript-wrapper .grid_3 {
+    width: 30% !important;
+}
+
 .postscript-wrapper .block-inner {
     padding: 0;
 }
 
 .postscript-wrapper .content {
     padding: 0;
-    color: #999999;
 }
 
 .postscript-wrapper h3 {
     display: block;
-    margin-left: 20px;
     margin-bottom: 10px;
 }
 
@@ -335,6 +342,12 @@ article .field-image {
     padding-right: 5px;
     background: #333333;
     color: #999999;
+}
+
+/* override default styles for user menu in footer */
+#postscript .block-menu-block ul.menu li {
+    padding-left: 0 !important;
+    list-style-type: none !important;
 }
 
 #postscript .item-list ul li {
@@ -391,7 +404,7 @@ article .field-image {
 --------------------------------------------------------------------------*/
 
 
-/* LISTS 
+/* LISTS
 --------------------------------------------------------------------------*/
 
 .item-list ul {
@@ -654,6 +667,12 @@ article .field-image {
 
 #main-menu-second-level ul.menu li li.expanded, #main-menu-second-level ul.menu li li li.expanded {
     background: 0;
+}
+
+/* theme default mobile menu */
+#mm0 {
+    display: none;
+    visibility: hidden;
 }
 
 /* SIDE MENU
@@ -1484,7 +1503,7 @@ textarea, select, input[type="date"], input[type="datetime"], input[type="dateti
 --------------------------------------------------------------------------*/
 
 .region-main-menu .contextual-links-region #block-simpleads-ad-groups-436 {
-	text-align:center;
+    text-align:center;
 }
 
 /* advanced poll block */
