--- a/sites/marshallcountyjournal.etypegoogle8.com/themes/cni/css/site.css
+++ b/sites/marshallcountyjournal.etypegoogle8.com/themes/cni/css/site.css
@@ -66,6 +66,12 @@ article.node-webform .node-content-wrapper h1.title {
         margin: 0;
     }
 
+    /* top ad */
+    #block-block-36 {
+        width: 728px;
+        margin: 0 auto 1em auto;
+    }
+
 }
 
 @media only screen and (max-width: 767px) {
