--- a/sites/marshallcountyjournal.etypegoogle8.com/themes/cni/css/site.css
+++ b/sites/marshallcountyjournal.etypegoogle8.com/themes/cni/css/site.css
@@ -49,6 +49,13 @@ article.node-webform .node-content-wrapper h1.title {
         margin: 0 auto 0 70px;
     }
 
+
+    /* top ad */
+    #block-block-36 {
+        width: 728px;
+        margin: 0 auto 1em auto;
+    }
+
 }
 
 /* desktop browsers */
@@ -80,6 +87,13 @@ article.node-webform .node-content-wrapper h1.title {
     #block-dfp-acadia-leaderboard, #block-dfp-acadia-banner2 {
         display: none;
         visibility: hidden;
+    }
+
+
+    /* top ad */
+    #block-block-36 {
+        width: 728px;
+        margin: 0 auto 1em auto;
     }
 
 }
