--- a/sites/clintondailynews.com/themes/masthead/css/style1.css
+++ b/sites/clintondailynews.com/themes/masthead/css/style1.css
@@ -1035,6 +1035,6 @@ ul.quicktabs-tabs.quicktabs-style-nostyle li.active a {
 }
 
 /* PREMIUM CONTENT */
-.node-teaser .premium-message p {
+.premium-message p {
     display: block;
 }
